--- a/index.html
+++ b/index.html
@@ -1,5 +1,61 @@
+<!DOCTYPE html>
 <html>
+
+<head>
+	<meta charset="utf-8" />
+	<title>Amrita Iyer's Portfolio</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+	<link href="style.css" rel="stylesheet" type="text/css" media="screen">
+</head>
+
 <body>
-<p> Hello world </p>
+	<div id="container">
+		<nav class="nav">
+        <div class="container-fluid">
+            <div class="logo">
+                <a href="#"></a>
+            </div>
+            <div id="mainListDiv" class="main_list">
+                <ul class="navlinks">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <span class="navTrigger">
+                <i></i>
+                <i></i>
+                <i></i>
+            </span>
+        </div>
+    </nav>
+		<!-- Navbar -->
+		<div id="container"></div>
+		<div class="row">
+			<div class="col-sm-1"></div>
+			<div class="col-sm-4">
+				<div class="mask">
+					<div class="text-white">
+						<h4 class="mb-3">Hi, A bit about me..</h4>
+						<p id="aboutme">
+							 “No thief, however skilful, can rob one of knowledge, and that is why knowledge is the best and safest treasure to acquire.”
+							 A double Masters in Business Analytics and Software engineering I am in constant thirst for expanding my knowledge. 
+							 I am a skilled and flexible professional who is interested in learning new technology and expanding one's horizon. 
+							 
+               I adapt to a dynamic environment very quickly and embrace teamwork but I also enjoy working alone.
+							 I love travelling, reading books, watching Netflix, painting, dancing etc. I believe I am a creative individual who is 
+							 constantly trying out new things.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6">
+
+			</div>
+		</div>
+	</div>
+	</div>
 </body>
+
 </html>
